deps/v8/test/message/fail/strict-octal-number.out
*%(basename)s:32: SyntaxError: Octal literals are not allowed in strict mode.
  var x = 012;
          ^^^
SyntaxError: Octal literals are not allowed in strict mode.
